--- a/app/src/main/res/layout/activity_main2_dados_inversor.xml
+++ b/app/src/main/res/layout/activity_main2_dados_inversor.xml
@@ -274,7 +274,7 @@
             android:labelFor="@+id/idFreqRede" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/idbuttonseguiact3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/idFreqRede"
