--- a/app/src/main/res/layout/activity_main3_activityinversor.xml
+++ b/app/src/main/res/layout/activity_main3_activityinversor.xml
@@ -55,7 +55,6 @@
             android:id="@+id/edit_rend_inv"
             android:layout_width="0dp"
             android:layout_height="28dp"
-            android:layout_marginStart="8dp"
             android:background="#030101"
             android:ems="10"
             android:hint="@string/_19"
@@ -75,7 +74,6 @@
             android:layout_width="0dp"
             android:layout_height="29dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:background="#030101"
             android:ems="10"
@@ -93,9 +91,8 @@
 
         <EditText
             android:id="@+id/editCorrente_Saida"
-            android:layout_width="187dp"
+            android:layout_width="0dp"
             android:layout_height="29dp"
-            android:layout_marginEnd="8dp"
             android:background="#030101"
             android:ems="10"
             android:hint="@string/_9_a"
@@ -106,7 +103,60 @@
             android:textColor="@android:color/holo_green_dark"
             android:textSize="18sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/tex_corrente_said2"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tex_corrente_said2" />
+
+        <EditText
+            android:id="@+id/editPeso_Inv"
+            android:layout_width="0dp"
+            android:layout_height="29dp"
+            android:background="#030101"
+            android:ems="10"
+            android:hint="@string/_20_kg"
+            android:inputType="numberDecimal"
+            android:selectAllOnFocus="false"
+            android:singleLine="false"
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_green_dark"
+            android:textSize="18sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/Tex_peso_inv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.714"
+            app:layout_constraintStart_toEndOf="@+id/Tex_peso_inv" />
+
+        <EditText
+            android:id="@+id/editArea_Inv"
+            android:layout_width="0dp"
+            android:layout_height="29dp"
+            android:background="#030101"
+            android:ems="10"
+            android:hint="@string/_1_m"
+            android:inputType="numberDecimal"
+            android:selectAllOnFocus="false"
+            android:singleLine="false"
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_green_dark"
+            android:textSize="18sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/tex_area_inv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tex_area_inv" />
+
+        <EditText
+            android:id="@+id/edit_Garantia_Inv"
+            android:layout_width="0dp"
+            android:layout_height="29dp"
+            android:background="#030101"
+            android:ems="10"
+            android:hint="@string/_10_anos"
+            android:inputType="numberDecimal"
+            android:selectAllOnFocus="false"
+            android:singleLine="false"
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_green_dark"
+            android:textSize="18sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/tex_garantia_preco"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tex_garantia_preco" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline"
@@ -129,7 +179,7 @@
             android:layout_marginBottom="414dp"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintGuide_begin="94dp"
+            app:layout_constraintGuide_begin="81dp"
             app:layout_constraintTop_toBottomOf="@+id/titulo_inv_2" />
 
         <TextView
@@ -157,9 +207,68 @@
             android:textColor="?android:attr/colorBackgroundCacheHint"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/editCorrente_Saida"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline3" />
+
+        <TextView
+            android:id="@+id/Tex_peso_inv"
+            android:layout_width="0dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="16dp"
+            android:contentDescription="@string/corrente_Saida_texto"
+            android:layerType="software"
+            android:text="@string/text_Peso_Inv"
+            android:textAlignment="viewStart"
+            android:textColor="?android:attr/colorBackgroundCacheHint"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tex_corrente_said2" />
+
+        <TextView
+            android:id="@+id/tex_area_inv"
+            android:layout_width="0dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="16dp"
+            android:contentDescription="@string/corrente_Saida_texto"
+            android:layerType="software"
+            android:text="@string/text_Area_inv"
+            android:textAlignment="viewStart"
+            android:textColor="?android:attr/colorBackgroundCacheHint"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Tex_peso_inv" />
+
+        <TextView
+            android:id="@+id/tex_garantia_preco"
+            android:layout_width="0dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="16dp"
+            android:contentDescription="@string/corrente_Saida_texto"
+            android:layerType="software"
+            android:text="@string/text_Garantia_preco"
+            android:textAlignment="viewStart"
+            android:textColor="?android:attr/colorBackgroundCacheHint"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tex_area_inv" />
+
+        <TextView
+            android:id="@+id/tex_garantia_preco2"
+            android:layout_width="0dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="48dp"
+            android:contentDescription="@string/corrente_Saida_texto"
+            android:layerType="software"
+            android:text="@string/text_Garantia_preco"
+            android:textAlignment="viewStart"
+            android:textColor="?android:attr/colorBackgroundCacheHint"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tex_area_inv" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline3"
@@ -170,6 +279,13 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintGuide_percent="0.26"
             app:layout_constraintTop_toBottomOf="@+id/titulo_inv_2" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_end="491dp" />
 
     </android.support.constraint.ConstraintLayout>
 
